# ============================================================================
# Python 项目配置文件 (pyproject.toml)
# ============================================================================
#
# 【知识点：pyproject.toml】
# pyproject.toml 是 Python 项目的现代配置文件标准（PEP 517/518）
# 用于替代 setup.py、requirements.txt 等多个配置文件
#
# 常用配置项：
# - [project]: 项目元数据（名称、版本、依赖等）
# - [build-system]: 构建系统配置
# - [tool.*]: 工具配置（如 pytest、black、ruff 等）
#
# ============================================================================

[project]
# 项目基本信息
# ============================================================================

# 项目名称（pip install 时使用的名称）
name = "modle-top"

# 版本号（遵循语义化版本规范）
# 格式：主版本号.次版本号.修订号
# - 主版本号：不兼容的重大更改
# - 次版本号：向后兼容的功能新增
# - 修订号：向后兼容的问题修正
version = "0.1.0"

# 项目描述（发布到 PyPI 时显示）
description = "AI模型排行榜爬虫 - 学习Python爬虫的项目"

# README 文件路径（项目说明文档）
readme = "README.md"

# Python 版本要求
# requires-python 指定项目支持的 Python 版本
# >=3.13: 要求 Python 3.13 或更高版本
# 其他写法：
# - ">=3.10,<3.13": 支持 3.10 到 3.12
# - ">=3.8": 支持 3.8 及以上
requires-python = ">=3.13"

# 项目依赖
# ============================================================================
# 【知识点：依赖管理】
# dependencies 列出项目运行所需的第三方库
# 格式："包名>=最低版本" 或 "包名==精确版本"
#
# 安装依赖：
# pip install -e .        # 安装项目及其依赖（开发模式）
# pip install httpx        # 单独安装某个包
# pip install -e ".[dev]" # 安装项目及其可选依赖
# ============================================================================
dependencies = [
    # -------------------------------------------------------------------------
    # beautifulsoup4: HTML/XML 解析库
    # -------------------------------------------------------------------------
    # 【作用】从 HTML 或 XML 文件中提取数据
    # 【为什么需要】爬虫需要解析网页内容，提取需要的数据
    # 【核心概念】
    #   - BeautifulSoup: 解析器包装类
    #   - Tag: HTML 标签对象
    #   - NavigableString: 标签内的文本
    #   - select(): CSS 选择器查询
    #   - find()/find_all(): 搜索标签
    #
    # 官方文档：https://www.crummy.com/software/BeautifulSoup/bs4/doc/
    # -------------------------------------------------------------------------
    "beautifulsoup4>=4.14.3",
    
    # -------------------------------------------------------------------------
    # httpx: 现代 HTTP 客户端库
    # -------------------------------------------------------------------------
    # 【作用】发送 HTTP 请求（类似 requests 但功能更强）
    # 【为什么需要】爬虫需要访问网页，获取 HTML 内容
    # 【核心概念】
    #   - Client: HTTP 客户端（支持连接池、Cookie）
    #   - Request: HTTP 请求对象
    #   - Response: HTTP 响应对象
    #   - 同步和异步两种模式
    #   - HTTP/2 支持
    #
    # 对比 requests：
    #   ✓ 支持 HTTP/2
    #   ✓ 支持异步（asyncio）
    #   ✓ 更好的超时处理
    #   ✓ 自动处理重定向
    #
    # 官方文档：https://www.python-httpx.org/
    # -------------------------------------------------------------------------
    "httpx>=0.28.1",
    
    # -------------------------------------------------------------------------
    # lxml: 高性能 HTML/XML 解析器
    # -------------------------------------------------------------------------
    # 【作用】BeautifulSoup 的解析器后端（比 Python 内置的更快）
    # 【为什么需要】提高 HTML 解析速度和容错能力
    # 【核心概念】
    #   - etree: ElementTree API
    #   - html: HTML 解析器
    #   - xml: XML 解析器
    #
    # BeautifulSoup 支持的解析器：
    #   - html.parser: Python 内置，速度适中，容错好
    #   - lxml: 最快，需要安装 C 扩展 ← 我们使用这个
    #   - html5lib: 最容错，但最慢
    #
    # 官方文档：https://lxml.de/
    # -------------------------------------------------------------------------
    "lxml>=6.1.0",
]

# ============================================================================
# 可选依赖（开发工具）
# ============================================================================
# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0.0",      # 测试框架
#     "black>=23.0.0",       # 代码格式化
#     "ruff>=0.1.0",         # Linter（代码检查）
#     "mypy>=1.0.0",         # 类型检查
# ]
# 
# 安装：pip install -e ".[dev]"

# ============================================================================
# 构建系统配置
# ============================================================================
# [build-system]
# requires = ["hatchling"]  # 构建工具
# build-backend = "hatchling.build"  # 构建后端
#
# 【常用构建工具】
# - hatchling: 现代构建工具，速度快
# - setuptools: 传统工具，兼容性好
# - flit: 简单轻量
# - poetry: 依赖管理 + 构建

# ============================================================================
# 工具配置示例
# ============================================================================
# [tool.pytest.ini_options]
# testpaths = ["tests"]
#
# [tool.black]
# line-length = 100
# target-version = ['py313']
#
# [tool.ruff]
# line-length = 100
# select = ["E", "F", "W"]
#
# [tool.mypy]
# python_version = "3.13"
# strict = true
